#
# Makefile to install Magick++ headers
#
# Copyright Bob Friesenhahn, 1999, 2000, 2001, 2002
#
AUTOMAKE_OPTIONS = 1.7

includedir = @includedir@
pkgdatadir = $(datadir)/Magick++
pkglibdir = $(libdir)/Magick++
pkgincludedir = $(includedir)/Magick++

pkginclude_HEADERS = Blob.h CoderInfo.h Color.h Drawable.h \
	Exception.h Geometry.h Image.h Include.h Montage.h \
	Pixels.h STL.h TypeMetric.h

# Headers which are not installed but which are distributed
noinst_HEADERS = BlobRef.h Functions.h ImageRef.h Options.h Thread.h
